# skylite

./: .git-blame-ignore-revs  .gitignore  Cargo.toml  Makefile  rustfmt.toml
.github/workflows/: run-checks-on-push.yml
crates/skylite-assets/: Cargo.toml
crates/skylite-assets/asset-server/: asset-server.rkt  base-serde.rkt  log-trace.rkt  nodes.rkt  project-assets.rkt  project.rkt  sequences.rkt  serde.rkt  types.rkt  validate.rkt
crates/skylite-assets/asset-server/test/: project.rkt
crates/skylite-assets/src/: asset_server.rs  assets.rs  base_serde.rs  error.rs  lib.rs  main.rs  nodes.rs  projects.rs  sequences.rs
crates/skylite-assets/tests/test-project/: project.rkt
crates/skylite-compress/: Cargo.toml
crates/skylite-compress-proc/: Cargo.toml
crates/skylite-compress-proc/src/: lib.rs
crates/skylite-compress/src/: bit_prediction.rs  fibonacci_code.rs  lempel_ziv.rs  lib.rs  lz77.rs  lz78.rs  range_coding.rs
crates/skylite-core/: Cargo.toml
crates/skylite-core/src/: actors.rs  decode.rs  ecs.rs  lib.rs  mock.rs  nodes.rs  prelude.rs  scene.rs  scenes.rs  sequences.rs
crates/skylite-core/src/nodes/: list.rs
crates/skylite-core/tests/: actors.rs  basic_tests.rs  scenes.rs  sequence_tests.rs  test_project_1.rs
crates/skylite-core/tests/test-project-1/: project.scm
crates/skylite-core/tests/test-project-2/: project.scm
crates/skylite-mock/: Cargo.toml
crates/skylite-mock/src/: lib.rs
crates/skylite-proc/: Cargo.toml  build.rs
crates/skylite-proc/built-ins/: s-list.scm
crates/skylite-proc/chibi-scheme-wrapper/: Makefile  wrapper.c  wrapper.h
crates/skylite-proc/guile-wrapper/: Makefile  wrapper.c  wrapper.h
crates/skylite-proc/src/: assets.rs  chibi_scheme.rs  chibi_util.rs  ecs.rs  generate.rs  lib.rs  parse.rs  parse_util.rs  project.rs  scheme_util.rs  util.rs
crates/skylite-proc/src/generate/: actor.rs  actors.rs  encode.rs  node_lists.rs  nodes.rs  project.rs  scenes.rs  sequences.rs  util.rs
crates/skylite-proc/src/generate/sequences/: ir.rs
crates/skylite-proc/src/parse/: actors.rs  guile.rs  node_lists.rs  nodes.rs  project.rs  scenes.rs  scheme_util.rs  sequences.rs  util.rs  values.rs
docs/: actor_assets.md  actor_definition.md  node_assets.md  node_definition.md  node_lists.md  nodes.md  project_files.md  scene_assets.md  scene_definition.md  sequences.md  variables_and_types.md
racket/skylite/: asset.rkt
schemas/: _base.schema.yml  actor.schema.yml  scene.schema.yml  sprite.schema.yml
support/skylite-racket/: info.rkt
support/wasm4-target/: Cargo.toml
support/wasm4-target/src/: lib.rs  w4alloc.rs
(+22 files in other folders)
