[workspace]
members = ["crates/*"]
exclude = ["support/wasm4-target"]
resolver = "2"

[workspace.dependencies]
skylite-compress = { path = "./crates/skylite-compress", default-features = false }
skylite-proc = { path = "./crates/skylite-proc" }
skylite-core = { path = "./crates/skylite-core" }
skylite-mock = { path = "./crates/skylite-mock" }

[profile.release]
lto = true
opt-level = "z"
strip = "symbols"

[profile.profile-size]
inherits = "release"
debug = 2
split-debuginfo = "packed"
strip = "debuginfo"
