[package]
name = "skylite-compress-proc"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "^1.0"
skylite-compress.workspace = true

[dev-dependencies]
quote = "^1.0"

[features]
default = ["lz77", "range_coding"]
lz77 = ["skylite-compress/lz77"]
lz78 = ["skylite-compress/lz78"]
range_coding = ["skylite-compress/range_coding"]
