[package]
name = "skylite-proc"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[features]
big-endian = []

[dependencies]
proc-macro2 = "^1.0"
syn = {version = "^2.0", features = ["full", "parsing", "printing"]}
quote = "^1.0"
glob = "0.3.1"

skylite-compress = { workspace = true, default-features = true }
skylite-assets = { workspace = true }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
bindgen = "0.65.1"
